# voice

./: .gitignore  PERF_TUNING.md  README.md  SWARM.md  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
reports/: realtime-transcription-repro.md
scripts/: bump-version.sh  release-github.sh
src/: App.css  App.tsx  HistoryPanel.tsx  Onboarding.tsx  Overlay.css  Overlay.tsx  Settings.tsx  index.css  onboardingUtils.test.ts  onboardingUtils.ts  overlay-main.tsx  overlayUtils.test.ts  overlayUtils.ts  settingsUtils.test.ts  settingsUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api_key_store/: mod.rs
src-tauri/src/audio_capture_service/: mod.rs
src-tauri/src/auth_store/: mod.rs
src-tauri/src/history_store/: mod.rs
src-tauri/src/hotkey_service/: extended_shortcut.rs  macos_event_tap.rs  mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/permission_service/: mod.rs
src-tauri/src/settings_store/: mod.rs
src-tauri/src/status_notifier/: mod.rs
src-tauri/src/text_insertion_service/: mod.rs
src-tauri/src/transcription/: chatgpt.rs  mod.rs  openai.rs  realtime.rs
src-tauri/src/voice_pipeline/: mod.rs
src/hooks/: use-dark-mode.ts
www/src/routes/: index.tsx
