[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-autostart = "2"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "net", "rt", "macros"] }
httpdate = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
base64 = "0.22"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "native-tls"] }
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
coreaudio-rs = { version = "0.11", default-features = false, features = ["core_audio"] }
objc = "0.2"
objc2 = "0.6"
block2 = "0.6"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
